--- a/index.html
+++ b/index.html
@@ -97,25 +97,34 @@
 <div class="text-center mt-10">
   <img src="img/photo/hidenori_cut_stripetie_transparent2.png" class="img-fluid" alt="Responsive image">
 </div>
-<div class="container-fluid text-center bg-light pt-5 pb-5">
+<div class="bg-darkolivegreen text-white pt-5 pb-5 pl-2 pr-2 mt-3">
+  <h1 class="display-4 text-center border-bottom">弁護士による<span class="text-red">退職代行</span></h1>
   <p class="text-center h3">会社とのやりとりは全て弁護士が引き受けます。</p>
-  <p class="h5 text-center pt-5">弁護士　片山栄範</p>
+</div>
+<div class="container-fluid text-center bg-light pt-5 pb-5">
+<p class="h5 text-center pt-5">片山ひでのり法律事務所</p>
+  <p class="h5 text-center">代表弁護士　片山栄範</p>
   <p class="h5 text-center">（かたやま　ひでのり）</p>
   <p class="h5 text-center">静岡県弁護士会所属</p>
   <p class="h5 text-center">登録番号：４０４５９</p>
 </div>
 
-<div class="container-floud bg-darkolivegreen">
-  <div class="container">
-    <div class="d-flex align-items-center flex-row bd-highlight mb-3">
-      <div class="p-3 d-none d-sm-block"><img src="img/qtj-test@3x.png" alt="注意アイコン"></div>
-      <div class="p-3 text-white">
-        <p class="h4 p-3 border-bottom">弁護士ではない業者は、あなたの代わりに会社と交渉することができません。</p>
-        <p class="pt-3 h5">できるのは、会社に書類を送ったり、あなたからの伝言を伝えるだけです。</p>
-        <p class="pt-2 h5">弁護士なら、直接会社とやりとりし、会社と交渉をした上で、退職手続きを進めることができます。</p>
+<div class="container-floud bg-darkolivegreen text-white pt-3 pb-3 mb-4">
+<div class="container">
+  <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+  <div class="row">
+    <div class="col-6 col-sm-2 m-auto">
+      <div class="d-flex justify-content-center">
+        <img src="img/qtj-test@3x.png" alt="注意アイコン">
       </div>
     </div>
+    <div class="col-12 col-sm-10">
+      <p class="h4 p-3 border-bottom">弁護士ではない業者は、あなたの代わりに会社と交渉することができません。</p>
+      <p class="pt-3 h5">できるのは、会社に書類を送ったり、あなたからの伝言を伝えるだけです。</p>
+      <p class="pt-2 h5">弁護士なら、直接会社とやりとりし、会社と交渉をした上で、退職手続きを進めることができます。</p>
+    </div>
   </div>
+</div>
 </div>
 
 
@@ -135,7 +144,9 @@
     <label for="exampleFormControlTextarea1">お問い合わせ内容</label>
     <textarea name="お問い合わせ内容" class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="お問い合わせ内容" required></textarea>
   </div>
+  <div class="d-flex justify-content-center">
     <button type="submit" class="btn btn-primary">送信する</button>
+  </div>
   </form>
 </div>
   <!-- End Form  -->
