--- a/index.html
+++ b/index.html
@@ -97,16 +97,20 @@
 <div class="text-center mt-10">
   <img src="img/photo/hidenori_cut_stripetie_transparent2.png" class="img-fluid" alt="Responsive image">
 </div>
-<div class="bg-darkolivegreen text-white pt-5 pb-5 pl-2 pr-2 mt-3">
-  <h1 class="display-4 text-center border-bottom">弁護士による<span class="text-red">退職代行</span></h1>
-  <p class="text-center h3">会社とのやりとりは全て弁護士が引き受けます。</p>
-</div>
-<div class="container-fluid text-center bg-light pt-5 pb-5">
+<div class="container-fluid text-center bg-light">
 <p class="h5 text-center pt-5">片山ひでのり法律事務所</p>
   <p class="h5 text-center">代表弁護士　片山栄範</p>
   <p class="h5 text-center">（かたやま　ひでのり）</p>
   <p class="h5 text-center">静岡県弁護士会所属</p>
   <p class="h5 text-center">登録番号：４０４５９</p>
+</div>
+
+<div class="bg-darkolivegreen text-white pt-5 pb-5 pl-2 pr-2 mt-3">
+  <h1 class="display-4 text-center border-bottom">弁護士による<span class="text-red">退職代行</span></h1>
+</div>
+<div class="container-fluid text-center bg-light p-4">
+  <p class="text-center h4">会社とのやりとりは</p>
+  <p class="text-center h4">全て弁護士が引き受けます。</p>
 </div>
 
 <div class="container-floud bg-darkolivegreen text-white pt-3 pb-3 mb-4">
