アップロードした

--- a/procedure.html
+++ b/procedure.html
@@ -91,7 +91,7 @@
 
 <!--  Content  -->
 <div class="container-fluid p-0">
-  <h1 class="text-center text-white bg-teal p-5 border-bottom mb-5">退職までのステップ</h1>
+  <h1 class="text-center text-white bg-teal p-5 border-bottom mb-5">退職代行までのステップ</h1>
 
 </div>
 
