--- a/thanks.html
+++ b/thanks.html
@@ -97,7 +97,7 @@
   <p class="h2 text-center text-white bg-teal p-5 border-bottom mb-5">お問い合わせいただきありがとうございます。</p>
 </div>
 <div class="container">
-  <p class="text-center">２、３日経っても連絡がない場合は、恐れ入りますが０５０−３１８８−０９７０までお電話ください。</p>
+  <p class="text-center h4">２、３日経っても連絡がない場合は、恐れ入りますが０５０−３６２８−５３７７までお電話ください。</p>
 
 </div>
 
