--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 <!--  END Navbar  -->
 
 <!-- 復活  -->
-<div class="container-fluid bg-green">
+<div class="container-fluid bg-darkolivegreen">
  <div class="container pt-3 pb-1">
    <h2 class="text-center text-white"><strong>静岡県弁護士会所属</strong></h2>
    <h1 class="text-center text-white"><strong>弁護士　片 山 栄 範</strong></h1>
@@ -135,13 +135,15 @@
 <div class="container-fluid mt-4">
   <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white a-white">
+      <a href="index.html#form01">
         <span style="font-size: 2em; color: #FF7F00;">
-          <i class="fas fa-comments"></i>
+          <i class="fab fa-wpforms"></i>
         </span>
-        <p class="text-center">チャットで相談</p>
+        <p class="text-center">フォームで相談</p>
+      </a>
     </div>
     <div class="col-sm text-center bg-secondary text-white a-white">
-      <a href="mailto:info@katayama-law.jp">
+      <a href="mailto:quitjob@katayama-law.jp">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-envelope"></i>
         </span>
@@ -149,7 +151,7 @@
       </a>
     </div>
     <div class="col-sm text-center bg-teal text-white a-white">
-      <a href="tel:05031880970">
+      <a href="tel:05036285377">
         <span style="font-size: 2em; color: Tomato;">
           <i class="fas fa-phone"></i>
         </span>
