--- a/consultation.html
+++ b/consultation.html
@@ -129,13 +129,15 @@
 <div class="container-fluid mt-4">
   <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white a-white">
+      <a href="index.html#form01">
         <span style="font-size: 2em; color: #FF7F00;">
-          <i class="fas fa-comments"></i>
+          <i class="fab fa-wpforms"></i>
         </span>
-        <p class="text-center">チャットで相談</p>
+        <p class="text-center">フォームで相談</p>
+      </a>
     </div>
     <div class="col-sm text-center bg-secondary text-white a-white">
-      <a href="mailto:info@katayama-law.jp">
+      <a href="mailto:quitjob@katayama-law.jp">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-envelope"></i>
         </span>
@@ -143,7 +145,7 @@
       </a>
     </div>
     <div class="col-sm text-center bg-teal text-white a-white">
-      <a href="tel:05031880970">
+      <a href="tel:05036285377">
         <span style="font-size: 2em; color: Tomato;">
           <i class="fas fa-phone"></i>
         </span>
