--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
   <!--  Form  -->
-<div class="container p-3 bg-green text-white">
+<div class="container p-3 bg-green text-white" id="form01">
   <h1>お問い合わせフォーム</h1>
   <form method="post" action="mail.php">
     <div class="form-group">
@@ -158,10 +158,11 @@
   <div class="container-fluid mt-4">
     <div class="row mt-3">
       <div class="col-sm text-center bg-green text-white a-white">
+        <a href="form01"></a>
           <span style="font-size: 2em; color: #FF7F00;">
-            <i class="fas fa-comments"></i>
+            <i class="fab fa-wpforms"></i>
           </span>
-          <p class="text-center">チャットで相談</p>
+          <p class="text-center">フォームで相談</p>
       </div>
       <div class="col-sm text-center bg-secondary text-white a-white">
         <a href="mailto:quitjob@katayama-law.jp">
