--- a/payment.html
+++ b/payment.html
@@ -153,13 +153,15 @@
 <div class="container-fluid mt-4">
   <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white a-white">
+      <a href="index.html#form01">
         <span style="font-size: 2em; color: #FF7F00;">
-          <i class="fas fa-comments"></i>
+          <i class="fab fa-wpforms"></i>
         </span>
-        <p class="text-center">チャットで相談</p>
+        <p class="text-center">フォームで相談</p>
+      </a>
     </div>
     <div class="col-sm text-center bg-secondary text-white a-white">
-      <a href="mailto:info@katayama-law.jp">
+      <a href="mailto:quitjob@katayama-law.jp">
         <span style="font-size: 2em; color: #FF7F00;">
           <i class="fas fa-envelope"></i>
         </span>
@@ -167,7 +169,7 @@
       </a>
     </div>
     <div class="col-sm text-center bg-teal text-white a-white">
-      <a href="tel:05031880970">
+      <a href="tel:05036285377">
         <span style="font-size: 2em; color: Tomato;">
           <i class="fas fa-phone"></i>
         </span>
@@ -175,8 +177,7 @@
       </a>
     </div>
   </div>
-</div>
-<!--  事務所情報  -->
+</div><!--  事務所情報  -->
 <footer class="footer">
   <div class="container">
     <address class="text-center m-4">
