--- a/map.html
+++ b/map.html
@@ -91,7 +91,7 @@
 <!--  END Navbar  -->
 
 <div class="container-fluid">
-  <h1 class="text-center text-white bg-green   p-5 border-bottom mb-5">片山ひでのり法律事務所</h1>
+  <h1 class="text-center text-white bg-darkolivegreen   p-5 border-bottom mb-5">片山ひでのり法律事務所</h1>
 </div>
 
 <!--  Map  -->
@@ -125,6 +125,7 @@
 
 
     <!--  Footer  -->
+    <strong>
     <div class="container-fluid mt-4">
       <div class="row mt-3">
         <div class="col-sm text-center bg-green text-white a-white">
@@ -153,6 +154,7 @@
         </div>
       </div>
     </div>
+    </strong>
     <!--  事務所情報  -->
     <footer class="footer">
       <div class="container">
