--- a/payment.html
+++ b/payment.html
@@ -95,7 +95,7 @@
 
 
 <!--  Content  -->
-<div class="container-fluid bg-green">
+<div class="container-fluid bg-teal">
   <h1 class="text-center text-white p-5 mb-5">お支払い方法</h1>
 </div>
 
@@ -150,6 +150,7 @@
 <!-- End Flexbox PayPal -->
 
 <!--  Footer  -->
+<strong>
 <div class="container-fluid mt-4">
   <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white a-white">
@@ -177,7 +178,9 @@
       </a>
     </div>
   </div>
-</div><!--  事務所情報  -->
+</div>
+</strong>
+<!--  事務所情報  -->
 <footer class="footer">
   <div class="container">
     <address class="text-center m-4">
