--- a/procedure.html
+++ b/procedure.html
@@ -102,7 +102,7 @@
   </div>
   <div class="w-75 p-2 procedure-box bg-teal">
     <p class="h4 p-3 bg-yellow text-teal"><strong>相　談</strong></p>
-    <p class="p-3 bg-info text-white">メール・チャット・お電話でご相談ください。手続きの詳細についてもご説明いたします。　<a href="consultation.html">詳しくはこちら　＞</a></p>
+    <p class="p-3 bg-info text-white">メール・フォーム・お電話でご相談ください。手続きの詳細についてもご説明いたします。　<a href="consultation.html">詳しくはこちら　＞</a></p>
 
   </div>
 </div>
@@ -188,6 +188,7 @@
 
 
 <!--  Footer  -->
+<strong>
 <div class="container-fluid mt-4">
   <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white a-white">
@@ -216,6 +217,7 @@
     </div>
   </div>
 </div>
+</strong>
 <!--  事務所情報  -->
 <footer class="footer">
   <div class="container">
