--- a/fee.html
+++ b/fee.html
@@ -143,6 +143,7 @@
 
 
 <!--  Footer  -->
+<strong>
 <div class="container-fluid mt-4">
   <div class="row mt-3">
     <div class="col-sm text-center bg-green text-white a-white">
@@ -171,6 +172,7 @@
     </div>
   </div>
 </div>
+</strong>
 <!--  事務所情報  -->
 <footer class="footer">
   <div class="container">
