--- a/thanks.html
+++ b/thanks.html
@@ -100,17 +100,19 @@
 
 
 
-  <!--  Footer  -->
+<!--  Footer  -->
+  <strong>
   <div class="container-fluid mt-4">
     <div class="row mt-3">
       <div class="col-sm text-center bg-green text-white a-white">
+        <a href="form01"></a>
           <span style="font-size: 2em; color: #FF7F00;">
-            <i class="fas fa-comments"></i>
+            <i class="fab fa-wpforms"></i>
           </span>
-          <p class="text-center">チャットで相談</p>
+          <p class="text-center">フォームで相談</p>
       </div>
       <div class="col-sm text-center bg-secondary text-white a-white">
-        <a href="mailto:info@katayama-law.jp">
+        <a href="mailto:quitjob@katayama-law.jp">
           <span style="font-size: 2em; color: #FF7F00;">
             <i class="fas fa-envelope"></i>
           </span>
@@ -118,7 +120,7 @@
         </a>
       </div>
       <div class="col-sm text-center bg-teal text-white a-white">
-        <a href="tel:05031880970">
+        <a href="tel:05036285377">
           <span style="font-size: 2em; color: Tomato;">
             <i class="fas fa-phone"></i>
           </span>
@@ -127,19 +129,20 @@
       </div>
     </div>
   </div>
-  <!--  事務所情報  -->
-  <footer class="footer">
-    <div class="container">
-      <address class="text-center m-4">
-        <strong>片山ひでのり法律事務所</strong><br>
-        <strong>弁護士　片山栄範</strong><br>
-        静岡県弁護士会所属　登録番号４０４５９<br>
-        〒422-8067　静岡市駿河区南町１３−３ ＴＫビル４階<br>
-        <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05036285377');" href="tel:05031880970"> 050-3628-5377 </a><br>
-        </span><a href="mailto:quitjob@katayama-law.jp">quitjob@katayama-law.jp</a>
-      </address>
-    </div>
-  </footer>
+  </strong>
+<!--  事務所情報  -->
+<footer class="footer">
+  <div class="container">
+    <address class="text-center m-4">
+      <strong>片山ひでのり法律事務所</strong><br>
+      <strong>弁護士　片山栄範</strong><br>
+      静岡県弁護士会所属　登録番号４０４５９<br>
+      〒422-8067　静岡市駿河区南町１３−３ ＴＫビル４階<br>
+      <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05036285377');" href="tel:05031880970"> 050-3628-5377 </a><br>
+      </span><a href="mailto:quitjob@katayama-law.jp">quitjob@katayama-law.jp</a>
+    </address>
+  </div>
+</footer>
 
 
 
