--- a/agreement.html
+++ b/agreement.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>agreement</title>
+  <title>契約の流れ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -100,7 +100,7 @@
     <p class="h1 p-3 text-white">1</p>
   </div>
   <div class="w-75 p-2 procedure-box bg-teal">
-    <p class="h4 p-3 bg-yellow text-teal"><strong>契約内容の説明</strong></p>
+    <p class="h4 p-3 bg-red text-white"><strong>契約内容の説明</strong></p>
     <p class="p-3 bg-info text-white">契約内容の詳細について、メールまたはお電話で、ご説明いたします。</p>
 
   </div>
@@ -119,7 +119,7 @@
     <p class="h1 p-3 text-white">2</p>
   </div>
   <div class="w-75 p-2 procedure-box bg-teal">
-    <p class="h4 p-3 bg-yellow text-teal"><strong>メールアドレスの確認</strong></p>
+    <p class="h4 p-3 bg-red text-white"><strong>メールアドレスの確認</strong></p>
     <p class="p-3 bg-info text-white">ご本人のメールアドレスであることを確認いたします。</p>
 
   </div>
@@ -139,7 +139,7 @@
     <p class="h1 p-3 text-white">3</p>
   </div>
   <div class="w-75 p-2 procedure-box bg-teal">
-    <p class="h4 p-3 bg-yellow text-teal"><strong>身分証明書の確認</strong></p>
+    <p class="h4 p-3 bg-red text-white"><strong>身分証明書の確認</strong></p>
     <div class="p-3 bg-info text-white">
     <p class="">ご本人であると確認できたメールアドレスから、免許証など身分証明書のデータを添付してご送付いただきます。</p>
   </div>
@@ -160,7 +160,7 @@
     <p class="h1 p-3">4</p>
   </div>
   <div class="w-75 p-2 text-white procedure-box bg-teal">
-    <p class="h4 p-3 bg-yellow text-teal"><strong>署名・捺印</strong></p>
+    <p class="h4 p-3 bg-red text-white"><strong>署名・捺印</strong></p>
     <p class="p-3 bg-info text-white">契約書を郵送いたしますので、それに署名・捺印をいただき、当事務所まで返送していただきます。</p>
   </div>
 </div>
