--- a/procedure.html
+++ b/procedure.html
@@ -121,7 +121,7 @@
   </div>
   <div class="w-75 p-2 procedure-box bg-teal">
     <p class="h4 p-3 bg-yellow text-teal"><strong>本人確認</strong></p>
-    <p class="p-3 bg-info text-white">免許証等の身分証明書の写真をメール（または郵送）で送信してください。<a href="consultation.html">詳しくはこちら　＞</a></p>
+    <p class="p-3 bg-info text-white">免許証等の身分証明書の写真をメール（または郵送）で送信してください。</p>
 
   </div>
 </div>
