--- a/payment.html
+++ b/payment.html
@@ -189,7 +189,8 @@
       静岡県弁護士会所属　登録番号４０４５９<br>
       〒422-8067　静岡市駿河区南町１３−３ ＴＫビル４階<br>
       <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05036285377');" href="tel:05031880970"> 050-3628-5377 </a><br>
-      </span><a href="mailto:quitjob@katayama-law.jp">quitjob@katayama-law.jp</a>
+      </span><a href="mailto:quitjob@katayama-law.jp">quitjob@katayama-law.jp</a><br>
+      <span><a href="https://katayama-law.jp/">katayama-law.jp</a></span>
     </address>
   </div>
 </footer>
