--- a/consultation.html
+++ b/consultation.html
@@ -108,7 +108,7 @@
   </span>
 
 </div>
-
+<div class="container-fluid bg-green">
 <!--  Form  -->
 <div class="container p-3 bg-green text-white">
 <form method="post" action="mail.php">
@@ -130,6 +130,7 @@
 </form>
 </div>
 <!-- End Form  -->
+</div>
 
 
 
