--- a/payment.html
+++ b/payment.html
@@ -74,7 +74,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
               <a class="dropdown-item" href="fee.html">料　金</a>
-              <a class="dropdown-item" href="payment.html">お支払い方法</a>
+              <a class="dropdown-item active" href="payment.html">お支払い方法</a>
             </div>
           </li>
 
