--- a/about.html
+++ b/about.html
@@ -91,10 +91,12 @@
 
 <!-- 復活  -->
 <div class="container-fluid bg-darkolivegreen">
- <div class="container pt-3 pb-1">
+ <div class="container pt-3 pb-3">
    <h2 class="text-center text-white"><strong>静岡県弁護士会所属</strong></h2>
    <h1 class="text-center text-white"><strong>弁護士　片 山 栄 範</strong></h1>
    <p class="text-center text-white h4">登録番号４０４５９</p>
+   <h1 class="text-center text-white"><strong>片山ひでのり法律事務所</strong></h1>
+  <h1 class="text-center text-white mb-0"><a href="https://katayama-law.jp" class="a-text-lightskyblue">katayama-law.jp</a></h1>
   </div>
 </div>
   <div class="text-center mt-3">
@@ -108,8 +110,8 @@
 <div class="row">
   <div class="col-12 col-md-4">
     <h2 class="text-center bg-green text-white pt-2 pb-2 h4">主な取扱案件</h2>
-    <p class="">離婚・子の引き渡し・相続などの家事事件を中心に幅広い案件を扱っている。</p>
-    <p>一方で、商学部を卒業後に金融機関へ勤務した経験から培った経営感覚を生かして、顧問先の経営に関する相談や、法人の事業者の破産案件も多く扱う。</p>
+    <p class="mb-0">いわゆる街弁として、個人の顧客の案件を中心に、弁護士として活動している。</p>
+    <p>残業代請求・不当解雇・あっせん手続き等の労働問題の他、受任事件は４００件を超える。</p>
   </div>
   <div class="col-12 col-md-4">
     <h2 class="text-center bg-green text-white pt-2 pb-2 h4">行政機関の委員</h2>
