--- a/index.html
+++ b/index.html
@@ -146,6 +146,25 @@
   </div>
 </div>
 
+<div class="container-fluid bg-darkolivegreen text-white pt-3 pb-3 mt-0">
+  <div class="container">
+    <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+    <div class="row">
+      <div class="col-6 col-sm-2 m-auto">
+        <div class="d-flex justify-content-center">
+          <img src="img/stop-icon_1.png" alt="STOPアイコン">
+        </div>
+      </div>
+      <div class="col-12 col-sm-10">
+        <p class="h4 pt-3 pb-3 border-bottom">ちょっと待って！本当に退職できてる？</p>
+        <p class="pt-3 h5">片山ひでのり法律事務所の退職代行なら、内容証明を出して会社に通知するので、その時点で確実に退職できます。</p>
+        <p class="h5">内容証明の謄本は依頼者にお渡しするので安心です。</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="container-fluid bg-green">
 <!--  Form  -->
   <div class="container p-3 bg-green text-white" id="form01">
