--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </div>
       <div class="col-12 col-sm-10">
         <p class="h4 pt-3 pb-3 border-bottom">ちょっと待って！本当に退職できてる？</p>
-        <p class="pt-3 h5">片山ひでのり法律事務所の退職代行なら、内容証明を出して会社に通知するので、その時点で確実に退職できます。</p>
+        <p class="pt-3 h5">片山ひでのり法律事務所の退職代行なら、内容証明を出して会社に通知するので、確実に退職できます。</p>
         <p class="h5">内容証明の謄本は依頼者にお渡しするので安心です。</p>
       </div>
     </div>
