--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
    <h2 class="text-center text-white"><strong>静岡県弁護士会所属</strong></h2>
    <h1 class="text-center text-white"><strong>弁護士　片 山 栄 範</strong></h1>
    <p class="text-center text-white h4">登録番号４０４５９</p>
-   <h1 class="text-center text-white"><strong>片山ひでのり法律事務所</strong></h1>
+   <h1 class="text-center text-white h3">片山ひでのり法律事務所</h1>
   <h1 class="text-center text-white mb-0"><a href="https://katayama-law.jp" class="a-text-lightskyblue">katayama-law.jp</a></h1>
   </div>
 </div>
